--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./index.js"></script>
 </head>
 <body>
+    <!-- NAVBAR -->
     <nav>
         <div class="container">
             <h2 class="log">ROCINAR</h2>
@@ -19,12 +20,145 @@
                 <input type="search" placeholder="Search for creators">
             </div>
             <div class="create">
-                <label class="btn btn-primary" for="#create-post">Create</label>
+                <label class="btn btn-primary" for="#">Create</label>
                 <div class="profile-photo">
                     <img src="./assets/theo.jpg" alt="">
                 </div>
             </div>
         </div>
     </nav>
+
+    <!-- MAIN SECTION -->
+    <main>
+        <div class="container">
+            <!-- LEFT SIDEBAR -->
+            <div class="left">
+                <a class="profile">
+                    <div class="profile-photo">
+                        <img src="./assets/theo.jpg" alt="">
+                    </div>
+                    <div class="handle">
+                        <h4>Theo Doe</h4>
+                        <p class="text-muted">
+                            @jdoe
+                        </p>
+                    </div>
+                </a>
+                <!-- SIDEBAR -->
+                <div class="sidebar">
+                    <a class="menu-item active">
+                        <span>
+                            <i class="uil uil-home"></i>
+                        </span>
+                        <h3>Home</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span>
+                            <i class="uil uil-compass"></i>
+                        </span>
+                        <h3>Explore</h3>
+                    </a>
+                    <a class="menu-item" id="notifications">
+                        <span>
+                            <i class="uil uil-bell"><small class="notification-count">5+</small></i>
+                        </span>
+                        <h3>Notifications</h3>
+                        <!-- NOTIFICATION POPUP -->
+                        <div class="notifications-popup">
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>John Doe</b> accepted your friend request
+                                    <small class="text-muted">2 DAYS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Sam Doe</b> update profile photo
+                                    <small class="text-muted">2 WEEKS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Mike Doe</b> accepted your friend request
+                                    <small class="text-muted">2 DAYS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Sam Doe</b> update profile photo
+                                    <small class="text-muted">2 WEEKS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Sam Doe</b> update profile photo
+                                    <small class="text-muted">2 WEEKS AGO</small>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="menu-item" id="messages-notifications">
+                        <span class="notification-count">
+                            <i class="uil uil-envelope-alt">6</i>
+                        </span>
+                        <h3>Messages</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span>
+                            <i class="uil uil-bookmark"></i>
+                        </span>
+                        <h3>Bookmarks</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span>
+                            <i class="uil uil-chart-line"></i>
+                        </span>
+                        <h3>Analytics</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span>
+                            <i class="uil uil-pallete"></i>
+                        </span>
+                        <h3>Theme</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span>
+                            <i class="uil uil-setting"></i>
+                        </span>
+                        <h3>Settings</h3>
+                    </a>
+                    <!-- END -->
+                    <label class="btn btn-primary" for="create-post">
+                        Create Post
+                    </label>
+                </div>
+            </div>
+
+            <!-- MIDDLE -->
+            <div class="middle">
+            a
+            </div>
+
+            <!-- RIGHT SIDEBAR -->
+            <div class="right">
+                b
+            </div>
+        </div>
+    </main>
 </body>
 </html>
