--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="search" placeholder="Search for creators">
             </div>
             <div class="create">
-                <label class="btn btn-primary" for="#">Create</label>
+                <label class="btn btn-primary" for="create-post">Create</label>
                 <div class="profile-photo">
                     <img src="./assets/theo.jpg" alt="">
                 </div>
@@ -151,7 +151,294 @@
 
             <!-- MIDDLE -->
             <div class="middle">
-            a
+                <!-- STORIES -->
+                <div class="stories">
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">Other Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">New Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">John Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">Mark Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <p class="name">Luke Story</p>
+                    </div>
+                </div>
+
+                <!-- CREATE POST -->
+                <form class="create-post">
+                    <div class="profile-photo">
+                        <img src="./assets/theo.jpg" alt="">
+                    </div>
+                    <input type="text" name="" id="create-post" placeholder="What's on your mind?">
+                    <input type="submit" value="Post" class="btn btn-primary">
+                </form>
+
+                <!-- FEEDS -->
+                <div class="feeds">
+                    <div class="feed">
+                        <!-- HEAD -->
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Smith Doe</h3>
+                                    <small>Harare, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!-- CONTENT -->
+                        <div class="photo">
+                            <img src="./assets/post.png" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span>
+                                    <i class="uil uil-heart"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-comment-dots"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-share-alt"></i>
+                                </span>
+                            </div>
+                             <div class="bookmark">
+                                 <span>
+                                    <i class="uil uil-bookmark-full"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="liked-by">
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/theo.jpg" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <p>Liked by <b>John Doe</b> and <b>233 others</b></p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mike Bond</b> Lipsum dolor sit, amet. <span class="span harsh-tag">#trending</span></p>
+                        </div>
+                        <div class="comments text-muted">
+                            View all 277 comments
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <!-- HEAD -->
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Smith Doe</h3>
+                                    <small>Harare, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!-- CONTENT -->
+                        <div class="photo">
+                            <img src="./assets/post.png" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span>
+                                    <i class="uil uil-heart"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-comment-dots"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-share-alt"></i>
+                                </span>
+                            </div>
+                             <div class="bookmark">
+                                 <span>
+                                    <i class="uil uil-bookmark-full"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="liked-by">
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/theo.jpg" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <p>Liked by <b>John Doe</b> and <b>233 others</b></p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mike Bond</b> Lipsum dolor sit, amet. <span class="span harsh-tag">#trending</span></p>
+                        </div>
+                        <div class="comments text-muted">
+                            View all 277 comments
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <!-- HEAD -->
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Smith Doe</h3>
+                                    <small>Harare, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!-- CONTENT -->
+                        <div class="photo">
+                            <img src="./assets/post.png" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span>
+                                    <i class="uil uil-heart"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-comment-dots"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-share-alt"></i>
+                                </span>
+                            </div>
+                             <div class="bookmark">
+                                 <span>
+                                    <i class="uil uil-bookmark-full"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="liked-by">
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/theo.jpg" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <p>Liked by <b>John Doe</b> and <b>233 others</b></p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mike Bond</b> Lipsum dolor sit, amet. <span class="span harsh-tag">#trending</span></p>
+                        </div>
+                        <div class="comments text-muted">
+                            View all 277 comments
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <!-- HEAD -->
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./assets/dp.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Smith Doe</h3>
+                                    <small>Harare, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!-- CONTENT -->
+                        <div class="photo">
+                            <img src="./assets/post.png" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span>
+                                    <i class="uil uil-heart"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-comment-dots"></i>
+                                </span>
+                                <span>
+                                    <i class="uil uil-share-alt"></i>
+                                </span>
+                            </div>
+                             <div class="bookmark">
+                                 <span>
+                                    <i class="uil uil-bookmark-full"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="liked-by">
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/theo.jpg" alt="">
+                            </span>
+                            <span>
+                                <img src="./assets/dp.png" alt="">
+                            </span>
+                            <p>Liked by <b>John Doe</b> and <b>233 others</b></p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mike Bond</b> Lipsum dolor sit, amet. <span class="span harsh-tag">#trending</span></p>
+                        </div>
+                        <div class="comments text-muted">
+                            View all 277 comments
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- RIGHT SIDEBAR -->
