--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    <!-- NAVBAR -->
+    <!-- TOP NAVBAR -->
     <nav>
         <div class="container">
             <h2 class="log">ROCINAR</h2>
@@ -114,7 +114,7 @@
                     </a>
                     <a class="menu-item" id="messages-notifications">
                         <span class="notification-count">
-                            <i class="uil uil-envelope-alt">6</i>
+                            <i class="uil uil-envelope-alt"><small class="messages-count">6</small></i>
                         </span>
                         <h3>Messages</h3>
                     </a>
@@ -132,7 +132,7 @@
                     </a>
                     <a class="menu-item">
                         <span>
-                            <i class="uil uil-pallete"></i>
+                            <i class="uil uil-palette"></i>
                         </span>
                         <h3>Theme</h3>
                     </a>
@@ -443,9 +443,175 @@
 
             <!-- RIGHT SIDEBAR -->
             <div class="right">
-                b
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages<i class="uil uil-edit"></i></h4>
+                    </div>
+                    <!-- SEARCH BAR -->
+                    <div class="search-bar">
+                        <i class="uil uil-search"></i>
+                        <input type="search" name="message-search" id="message-search" placeholder="Search messages">
+                    </div>
+                    <!-- MESSAGES CATEGORY -->
+                    <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <h6 class="message-requests">Requests(7)</h6>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-bold">Just woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-muted">Just woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-bold">Just woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-muted">Just woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-bold">Just woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./assets/dp.png" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Mark Doe</h5>
+                            <p class="text-muted">Just woke up bruh</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FRIEND REQUEST  -->
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./assets/dp.png" alt="">
+                            </div>
+                            <div>
+                                <h5>James Doe</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                         <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn">Decline</button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./assets/dp.png" alt="">
+                            </div>
+                            <div>
+                                <h5>James Doe</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                         <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn">Decline</button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./assets/dp.png" alt="">
+                            </div>
+                            <div>
+                                <h5>James Doe</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                         <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn">Decline</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
+
+    <!-- THEME CUSTOMIZATION -->
+    <div class="customize-theme">
+        <div class="card">
+            <h2>Customize your theme</h2>
+            <p>Manage your font size, color, and background.</p>
+
+            <!-- FONT SIZES -->
+            <div class="font-size">
+                <h4>Font Size</h4>
+                <div>
+                    <h6>Aa</h6>
+                    <div class="choose-size">
+                        <span class="font-size-1"></span>
+                        <span class="font-size-2"></span>
+                        <span class="font-size-3"></span>
+                        <span class="font-size-4"></span>
+                        <span class="font-size-5"></span>
+                    </div>
+                    <h3>Aa</h3>
+                </div>
+            </div>
+
+            <!-- PRIMARY COLORS -->
+            <div class="color">
+                <h4>Color</h4>
+                <div class="choose-color">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
