--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
     <div class="customize-theme">
         <div class="card">
             <h2>Customize your theme</h2>
-            <p>Manage your font size, color, and background.</p>
+            <p class="text-muted">Manage your font size, color, and background.</p>
 
             <!-- FONT SIZES -->
             <div class="font-size">
@@ -595,7 +595,7 @@
                     <h6>Aa</h6>
                     <div class="choose-size">
                         <span class="font-size-1"></span>
-                        <span class="font-size-2"></span>
+                        <span class="font-size-2 active"></span>
                         <span class="font-size-3"></span>
                         <span class="font-size-4"></span>
                         <span class="font-size-5"></span>
@@ -608,7 +608,30 @@
             <div class="color">
                 <h4>Color</h4>
                 <div class="choose-color">
-                    
+                    <span class="color-1 active"></span>
+                    <span class="color-2"></span>
+                    <span class="color-3"></span>
+                    <span class="color-4"></span>
+                    <span class="color-5"></span>
+                </div>
+            </div>
+
+            <!-- BACKGROUND COLORS -->
+            <div class="background">
+                <h4>Background</h4>
+                <div class="choose-bg">
+                    <div class="bg-1">
+                        <span></span>
+                        <h5 class="bg-1 active">Light</h5>
+                    </div>
+                    <div class="bg-2">
+                        <span></span>
+                        <h5 class="bg-2">Dim</h5>
+                    </div>
+                    <div class="bg-3">
+                        <span></span>
+                        <h5 class="bg-3">Lights Out</h5>
+                    </div>
                 </div>
             </div>
         </div>
