--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- ICON SCOUTS CDN -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
 </head>
 <body>
     <!-- TOP NAVBAR -->
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="menu-item" id="messages-notifications">
+                    <a class="menu-item" id="messages-notification">
                         <span class="notification-count">
                             <i class="uil uil-envelope-alt"><small class="messages-count">6</small></i>
                         </span>
@@ -130,7 +130,7 @@
                         </span>
                         <h3>Analytics</h3>
                     </a>
-                    <a class="menu-item">
+                    <a class="menu-item" id="theme">
                         <span>
                             <i class="uil uil-palette"></i>
                         </span>
@@ -450,7 +450,7 @@
                     <!-- SEARCH BAR -->
                     <div class="search-bar">
                         <i class="uil uil-search"></i>
-                        <input type="search" name="message-search" id="message-search" placeholder="Search messages">
+                        <input type="search" name="" id="message-search" placeholder="Search messages">
                     </div>
                     <!-- MESSAGES CATEGORY -->
                     <div class="category">
@@ -475,8 +475,8 @@
                             <img src="./assets/dp.png" alt="">
                         </div>
                         <div class="message-body">
-                            <h5>Mark Doe</h5>
-                            <p class="text-muted">Just woke up bruh</p>
+                            <h5>Luke Doe</h5>
+                            <p class="text-muted">Thank you bruh</p>
                         </div>
                     </div>
                     <!-- MESSAGE -->
@@ -485,8 +485,8 @@
                             <img src="./assets/dp.png" alt="">
                         </div>
                         <div class="message-body">
-                            <h5>Mark Doe</h5>
-                            <p class="text-bold">Just woke up bruh</p>
+                            <h5>John Doe</h5>
+                            <p class="text-bold">Well, noted!</p>
                         </div>
                     </div>
                     <!-- MESSAGE -->
@@ -496,8 +496,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>Mark Doe</h5>
-                            <p class="text-muted">Just woke up bruh</p>
+                            <h5>Jame Doe</h5>
+                            <p class="text-muted">all cool</p>
                         </div>
                     </div>
                     <!-- MESSAGE -->
@@ -506,8 +506,8 @@
                             <img src="./assets/dp.png" alt="">
                         </div>
                         <div class="message-body">
-                            <h5>Mark Doe</h5>
-                            <p class="text-bold">Just woke up bruh</p>
+                            <h5>Mary Doe</h5>
+                            <p class="text-bold">Wake up bruh</p>
                         </div>
                     </div>
                     <!-- MESSAGE -->
