--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
                     <h6>Aa</h6>
                     <div class="choose-size">
                         <span class="font-size-1"></span>
-                        <span class="font-size-2 active"></span>
-                        <span class="font-size-3"></span>
+                        <span class="font-size-2"></span>
+                        <span class="font-size-3 active"></span>
                         <span class="font-size-4"></span>
                         <span class="font-size-5"></span>
                     </div>
@@ -620,17 +620,17 @@
             <div class="background">
                 <h4>Background</h4>
                 <div class="choose-bg">
-                    <div class="bg-1">
+                    <div class="bg-1 active">
                         <span></span>
-                        <h5 class="bg-1 active">Light</h5>
+                        <h5 for="bg-1">Light</h5>
                     </div>
                     <div class="bg-2">
                         <span></span>
-                        <h5 class="bg-2">Dim</h5>
+                        <h5 for="bg-2">Dim</h5>
                     </div>
                     <div class="bg-3">
                         <span></span>
-                        <h5 class="bg-3">Lights Out</h5>
+                        <h5 for="bg-3">Lights Out</h5>
                     </div>
                 </div>
             </div>
