--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Social Site</title>
     <!-- ICON SCOUTS CDN -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+    <!-- STYLESHEET -->
     <link rel="stylesheet" href="./style.css">
+    <!-- Swiper's CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
+    <!-- JS -->
     <script src="./index.js" defer></script>
 </head>
 <body>
@@ -439,10 +445,12 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
 
             <!-- RIGHT SIDEBAR -->
             <div class="right">
+                <!-- MESSAGE -->
                 <div class="messages">
                     <div class="heading">
                         <h4>Messages<i class="uil uil-edit"></i></h4>
@@ -578,6 +586,85 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- TRENDING NEWS  -->
+                <div class="trending-news swiper mySwiper">
+                    <h4>Trending news</h4>
+                    <div class="swiper-wrapper">
+                        <article class="swiper-slide">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, repellat! Explicabo hic, neque dicta debitis ...
+                            </p>
+                            <div class="sender">
+                                <div class="avatar">
+                                    <img src="./assets/dp.png" alt="Patient One">
+                                </div>
+                                <div class="user-details">
+                                    <h5>Mark Doe</h5>
+                                    <small>Reporter</small>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="swiper-slide">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, repellat! Explicabo hic, neque dicta debitis ...
+                            </p>
+                            <div class="sender">
+                                <div class="avatar">
+                                    <img src="./assets/dp.png" alt="Patient One">
+                                </div>
+                                <div class="user-details">
+                                    <h5>Matthew Doe</h5>
+                                    <small>Reporter</small>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="swiper-slide">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, repellat! Explicabo hic, neque dicta debitis ...
+                            </p>
+                            <div class="sender">
+                                <div class="avatar">
+                                    <img src="./assets/dp.png" alt="Patient One">
+                                </div>
+                                <div class="user-details">
+                                    <h5>Smith Doe</h5>
+                                    <small>Reporter</small>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="swiper-slide">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, repellat! Explicabo hic, neque dicta debitis ...
+                            </p>
+                            <div class="sender">
+                                <div class="avatar">
+                                    <img src="./assets/dp.png" alt="Patient One">
+                                </div>
+                                <div class="user-details">
+                                    <h5>Henry Doe</h5>
+                                    <small>Reporter</small>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="swiper-slide">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, repellat! Explicabo hic, neque dicta debitis ...
+                            </p>
+                            <div class="sender">
+                                <div class="avatar">
+                                    <img src="./assets/dp.png" alt="Patient One">
+                                </div>
+                                <div class="user-details">
+                                    <h5>John Doe</h5>
+                                    <small>Reporter</small>
+                                </div>
+                            </div>
+                        </article>    
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
             </div>
         </div>
     </main>
@@ -636,5 +723,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
