--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             </div>
             <div class="create">
                 <label class="btn btn-primary" for="create-post">Create</label>
+                <div>
+                    <a href="https://github.com/TheophilusM/social-site" target="_blank">
+                        <i class="uil uil-github" style="font-size: 30px;"></i>
+                    </a>
+                </div>
                 <div class="profile-photo">
                     <img src="./assets/theo.jpg" alt="">
                 </div>
